--- a/NTHULearnor/MainWindow.xaml
+++ b/NTHULearnor/MainWindow.xaml
@@ -1,12 +1,43 @@
-﻿<Window x:Class="NTHULearnor.MainWindow"
+﻿<mh:MetroWindow x:Class="NTHULearnor.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mh="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:local="clr-namespace:NTHULearnor"
+        ShowIconOnTitleBar="True"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <mh:MetroWindow.LeftWindowCommands>
+        <mh:WindowCommands>
+
+        </mh:WindowCommands>
+    </mh:MetroWindow.LeftWindowCommands>
+    <mh:MetroWindow.RightWindowCommands>
+        <mh:WindowCommands>
+            <Button x:Name="btnSetting" Click="btnSetting_Click" ToolTip="Setting">
+                <Rectangle Width="20"
+                   Height="20"
+                   Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
+                    <Rectangle.OpacityMask>
+                        <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_settings}" />
+                    </Rectangle.OpacityMask>
+                </Rectangle>
+            </Button>
+            <Button x:Name="btnAbout" Click="btnAbout_Click" ToolTip="About App">
+                <Rectangle Width="20"
+                   Height="20"
+                   Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
+                    <Rectangle.OpacityMask>
+                        <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_information_circle}" />
+                    </Rectangle.OpacityMask>
+                </Rectangle>
+            </Button>
+        </mh:WindowCommands>
+    </mh:MetroWindow.RightWindowCommands>
+    
+
     <Grid>
         
     </Grid>
-</Window>
+</mh:MetroWindow>
